# python-template

./: .isort.cfg  .pre-commit-config.yaml  .pylintrc  .style.yapf  Pipfile  README.md  dot.envrc  dot.flake8  dot.gitignore  dot.pre-commit-config.yaml  install.sh  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg
vscode/: settings.json
