[tool.poetry]
name = "project name"
version = "0.1.0"
description = ""
authors = ["name <email>"]

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 99
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = []

stubPath = "src/stubs"
venvPath = ".venv"

reportMissingTypeStubs = false,

pythonVersion = "3.9",
typeCheckingMode = "strict"

executionEnvironments = [
  { "root": "./", "pythonVersion": "3.9", "extraPaths": ["src"] }
]
